# SIMD-Accelerated-LimitOrderBook

./: .env.template  .gitignore  CMakeLists.txt  CMakePresets.json  CONFIGURATION.md  ENV_README.md  README.md  build_and_test.sh  test_config_demo.sh
bench/scalar/: CMakeLists.txt  scalar_lob_engine.cpp  scalar_lob_engine.h  scalar_order_book.cpp  scalar_order_book.h  test_scalar  test_scalar.cpp
benchmark/: CMakeLists.txt  README.md  analyze_simd_functions.sh  benchmark_config.h.in  benchmark_framework.cpp  benchmark_framework.h  benchmark_framework_impl.cpp  cache_flusher.cpp  check_itch_stats.cpp  find_max_events.sh  nasdaq_itch_parser.cpp  nasdaq_itch_parser.h  perf_counters.cpp  profile_simd.sh  requirements.txt  results.sh  run_comprehensive_benchmark.cpp  run_single_benchmark.sh  visualize_results.py
include/: bitset_directory.h  bitset_directory.hpp  lob_engine.hpp  object_pool.hpp  order.h  order_book.hpp  price_level.hpp
scripts/: README.md  build_and_test.sh  load_env.sh  setup_dev_env.sh
src/: README.md  bitset_directory.cpp  bitset_directory.h  config.h  config.h.in  lob_engine.cpp  lob_engine.h  lob_engine_factory.h  object_pool.h  object_pool.hpp  optimization_config.h  order.cpp  order_book.cpp  order_book.h  price_level.cpp  price_level.h  price_level.hpp
tests/: README.md  run_all_tests.cpp  test_bitset_directory.cpp  test_lob_engine.cpp  test_order_book.cpp
